--- a/.env_example
+++ b/.env_example
@@ -12,15 +12,18 @@ SERVICE_TOKEN=service_token
 DEBUG=False
 
 # ====== Settings for database (Redis) ==================
-REDIS_HOST=localhost
-REDIS_PORT=26379
-REDIS_PASSWORD=passwd
-REDIS_IMAGE_PORT=26379
+REDIS_HOST=redis
+# Redis port (default 6379)
+REDIS_PORT=6379
+REDIS_PASSWORD=password
 
 # ====== Settings for external APIs (audio/streamqueue/etc) ==================
-STREAM_QUEUE_SERVICE_LIST_CONNECTIONS=http://streamqueue-service-example:8000/api/v1/list_connections
-STREAM_QUEUE_SERVICE_GET_NEXT_CHUNKS=http://streamqueue-service-example:8000/api/v1/get_next_chunks
-STREAM_QUEUE_SERVICE_HEALTH=http://streamqueue-service-example:8000/api/v1/health
-STREAM_QUEUE_SERVICE_HEALTH_CHECK=http://streamqueue-service-example:8000/api/v1/hc
+STREAM_QUEUE_SERVICE_LIST_CONNECTIONS=https://stream_dmitry.dev.vexa.ai/api/v1/list_connections
+STREAM_QUEUE_SERVICE_GET_NEXT_CHUNKS=https://stream_dmitry.dev.vexa.ai/api/v1/get_next_chunks
+STREAM_QUEUE_SERVICE_HEALTH=https://stream_dmitry.dev.vexa.ai/api/v1/health
+STREAM_QUEUE_SERVICE_HEALTH_CHECK=https://stream_dmitry.dev.vexa.ai/api/v1/hc
 STREAM_QUEUE_SERVICE_REQUEST_TIMEOUT=120
 STREAM_QUEUE_SERVICE_AUTH_TOKEN=TOKEN
+
+WHISPER_SERVICE_URL=https://transcribe.dev.vexa.ai
+WHISPER_API_TOKEN=default_token_change_me  # Change this to a secure token in production
