--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,8 @@ services:
     volumes:
       - ./streamqueue:/usr/src/app/streamqueue
       - ./shared_lib:/usr/src/app/shared_lib
-   # command: python streamqueue/main.py
-    command: tail -f /dev/null
+    command: python -m streamqueue.main
+    # command: tail -f /dev/null
     restart: unless-stopped
     ports:
       - "${API_PORT}:${API_PORT}"
@@ -44,8 +44,7 @@ services:
       - ${VOLUME_DATA_PATH}:/data/audio
       - ./app:/usr/src/app/app
       - ./shared_lib:/usr/src/app/shared_lib
-    #command: python app/main.py
-    command: tail -f /dev/null
+    command: supervisord -c /usr/src/app/app/supervisord.conf
     restart: unless-stopped
     extra_hosts:
       - "host.docker.internal:host-gateway"
@@ -65,7 +64,9 @@ services:
       - RAW_AUDIO_PATH
       - SEGMENTS_PATH
       - REDIS_PASSWORD
-      - PYTHONPATH=/app/streamqueue:/app/shared_lib
+      - TRANSCRIBER_STEP_SEC
+      - MAX_AUDIO_LENGTH_SEC
+      - PYTHONPATH=/usr/src/app
 
 networks:
   default:
