--- a/.env.example
+++ b/.env.example
@@ -14,15 +14,15 @@ CHECK_AND_PROCESS_CONNECTIONS_INTERVAL_SEC=2
 SPEAKER_DELAY_SEC=1
 
 # API Configuration
-API_HOST=0.0.0.0
-API_PORT=8008
-API_TOKEN=default_token_change_me
+TRANSCRIPTION_SERVICE_API_HOST=0.0.0.0
+TRANSCRIPTION_SERVICE_API_PORT=8008
+TRANSCRIPTION_SERVICE_API_TOKEN=default_token_change_me
 
 
 
 # Whisper Service
 WHISPER_PORT = 8033
-WHISPER_SERVICE_URL = "http://host.docker.internal:{WHISPER_PORT}"  
+WHISPER_SERVICE_URL = "http://host.docker.internal:${WHISPER_PORT}"  
 WHISPER_API_TOKEN=default_token_change_me
 
 # File Storage
@@ -32,5 +32,9 @@ SEGMENTS_PATH=/data/audio/segments
 TRANSCRIBER_STEP_SEC=5
 MAX_AUDIO_LENGTH_SEC=60
 
-ENGINE_API_URL=http://host.docker.internal:8010
+
+ENGINE_API_PORT=8010
+
+
+ENGINE_API_URL=http://host.docker.internal:${ENGINE_API_PORT}
 ENGINE_API_TOKEN=default_token_change_me
