--- a/.env.example
+++ b/.env.example
@@ -21,13 +21,8 @@ TRANSCRIPTION_SERVICE_API_TOKEN=default_token_change_me
 
 
 # Whisper Service
-WHISPER_PORT = 8033
-WHISPER_SERVICE_URL = "http://host.docker.internal:${WHISPER_PORT}"  
+WHISPER_SERVICE_URL = "http://host.docker.internal:8033" # WHISPER_PORT here
 WHISPER_API_TOKEN=default_token_change_me
-
-# File Storage
-RAW_AUDIO_PATH=/data/audio/raw
-SEGMENTS_PATH=/data/audio/segments
 
 TRANSCRIBER_STEP_SEC=5
 MAX_AUDIO_LENGTH_SEC=60
@@ -36,5 +31,5 @@ MAX_AUDIO_LENGTH_SEC=60
 ENGINE_API_PORT=8010
 
 
-ENGINE_API_URL=http://host.docker.internal:${ENGINE_API_PORT}
+ENGINE_API_URL="http://host.docker.internal:8010" # ENGINE_API_PORT here
 ENGINE_API_TOKEN=default_token_change_me
